--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -70,8 +70,22 @@
 	* {
 		@apply border-border;
 	}
+
+	input[type='date']::-webkit-calendar-picker-indicator {
+    padding: 8px;
+	}
+
 	body {
 		@apply bg-background text-foreground;
+	}
+
+	details > summary {
+		list-style: none;
+	}
+
+	details > summary::marker, /* Latest Chrome, Edge, Firefox */ 
+details > summary::-webkit-details-marker /* Safari */ {
+		display: none;
 	}
 }
 
